--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -167,7 +167,8 @@ weakening could occur; it is tacitly assumed weakening can always be pushed
 further up the derivation tree e.g. AxCut rule. a consequence of this choice
 is that for the empty choice rule there may only be a single binding in the
 context (cf. an arbitrary context in \citeauthor{Wadler:2014}'s
-presentation~\cite{Wadler:2014}).
+presentation~\cite{Wadler:2014}). one can compare alms with this version of cp
+since it weakening rule corresponds to affine logic
 
 % ...leading on to presentation of principal cut elimination rules...
 
