--- a/paper/background.tex
+++ b/paper/background.tex
@@ -187,15 +187,16 @@ affine rather than linearly typed.
 %% ``adoption and focus'' system but do not specify details or whether any
 %% changes are necessary to their typing judgements.
 
-The work on a linear functional language with session types by
-\citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} is the main influence for the
-current project from the body of work on session-based $\lambda$-calculus type
-systems. They provide paper proofs of their system's type safety. Given the
-non-trivial features of the type system such as recursive session types and
-buffered channels for supporting asynchronous communication it will be
-challenging to extend these proofs manually. A mechanised version would
-provide stronger guarantees of correctness and allow others to more easily
-alter proofs as a result of changes made to the language.
+The work on an linear functional language with asynchronous session types
+(LAST) by \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} is the main
+influence for the current project from the body of work on session-based
+$\lambda$-calculus type systems. They provide paper proofs of their system's
+type safety. Given the non-trivial features of the type system such as
+recursive session types and buffered channels for supporting asynchronous
+communication it will be challenging to extend these proofs manually. A
+mechanised version would provide stronger guarantees of correctness and allow
+others to more easily alter proofs as a result of changes made to the
+language.
 
 \subsubsection{Fusion}
 
@@ -215,51 +216,61 @@ Concurrency is provided by control operators which, respectively, spawn a
 child process and wait for a child process to complete. The spawning process
 creates a channel between parent and child process; a channel is represented
 as a continuation and the type denotes the communication protocol
-(i.e. session type) between parent and child.
+(i.e. session type) between parent and child \todo{what part of session type
+  is being discussed here? spawning process or spawning operation?}.
 
 \citeauthor{Mazurak:2010:LCC} present proofs for type safety, strong
 normalisation and confluence. Confluence provides the guarantee that no race
 conditions can occur, strong normalisation prohibits non-terminating programs
 and type safety assures deadlock-freedom. Deadlock-freedom is implied by the
 acyclic communication graphs (progress of process reduction) which occur
-between parallel processes; follows from permitting only one channel between
-two halves of parallel composition construct in the process calculus. Most of
-the development is supported by Coq proof scripts with remaining issues due to
-reasoning about communication graphs. The development does not provide
-primitive send and receives; instead, these are encoded as linear functions.
-%% and classical extension to second-order logic by
-%% \citeauthor{Mazurak:2013:LPP}'s PhD thesis~\cite{Mazurak:2013:LPP}.
+between parallel processes where progress follows from permitting only one
+shared channel between the two halves of a parallel composition in the process
+calculus. Most of the development is supported by Coq proof scripts with the
+exception being reasoning about communication graphs. The development does not
+provide primitive send and receives; instead, these are encoded as linear
+functions.
+
+\input{gv-types-terms}
 
 \citeauthor{Wadler:2014}'s recent work~\cite{Wadler:2014} brings together a
 process calculus, CP, based on the earlier work by
 \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by
-\citeauthor{Gay:2010:LAST}. GV presents session types using the standard
-presentation as described in \S~\ref{sec:pre}. CP presents linear logical
-connectives with session type interpretations inspired by
-\citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI}. \citeauthor{Wadler:2014}
-describes a continuation-passing style (CPS) translation from GV session types
-to CP classical linear logic propositions. The process calculus CP is slightly
-different to $\pi$DILL by \citeauthor{Caires:2010:STI}, apart from being
-classical in nature, the constructs for server replication are modified; CP
-provides a weakening and contraction rules whereas these are encoded in one
-rule for process reduction by \citeauthor{Caires:2010:STI}. Additionally,
-rather than a two-sided sequent calculus, \citeauthor{Wadler:2014} uses
-one-sided sequents for defining the process calculus, which provides a more
-intuitive presentation of session type duality and clearer correspondence to a
-$\lambda$-calculi surface syntax, simplifying the translation presentation. As
-presented, GV does not support all features of CP and thus the translation is
-one way (GV to CP). \citeauthor{Lindley:2014:SAP}~\cite{Lindley:2014:SAP}
-extend GV to provide support for polymorphism and replication, following a
-similar CPS translation scheme. Lastly,
+\citeauthor{Gay:2010:LAST}. GV presents session types using a modified version
+of the standard definition presented in \S~\ref{sec:pre}. Figure~\ref{??}
+presents the types of GV with session types ranged over by $S$. Note that
+\lstinline{end} has been replaced with $\outend$ and $\inend$ denoting the
+terminating session type for $\cdots$ and $\cdots$ respectively \todo{what are
+  the interpretations for $\outend$ and $\inend$? Need a figure for GV
+  sessions}. CP presents linear logical connectives with session type
+interpretations inspired by
+\citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI} shown in Figure~\ref{??}
+\todo{figure for CP types with session type
+  interpretation}. \citeauthor{Wadler:2014} describes a continuation-passing
+style (CPS) translation from GV session types to CP classical linear logic
+propositions.  \todo{terms and interpretations for CP/GV?} The process
+calculus CP is slightly different to $\pi$DILL by
+\citeauthor{Caires:2010:STI}, apart from being classical in nature, the
+constructs for server replication are modified; CP provides separate weakening
+and contraction rules whereas these are encoded in one rule for process
+reduction in $\pi$DILL. Additionally, rather than a two-sided sequent
+calculus, \citeauthor{Wadler:2014} uses one-sided sequents for defining CP,
+which provides a more intuitive presentation of session type duality and a
+clearer correspondence to a $\lambda$-calculi surface syntax, simplifying the
+translation presentation. As presented, GV does not support all features of CP
+and thus the translation is one way (GV to
+CP). \citeauthor{Lindley:2014:SAP}~\cite{Lindley:2014:SAP} extend GV to
+provide support for polymorphism and replication, following a similar CPS
+translation scheme. Lastly,
 \citeauthor{Lindley:2014:SPS}~\cite{Lindley:2014:SPS} describe operational
 semantics for GV and their system has greater similarities with LAST than
 prior GV works, for example, by treating send and receive as linear functions
 rather than language primitives.
 
-\subsection{Mechanising PL Metatheory}
+\subsection{Mechanising Metatheory}
 
-Interactive theorem proving and proof assistants have seen an upsurge in use
-in recent years. Especially within the domain of programming language
+Interactive theorem proving and proof assistants have experienced an upsurge
+in use in recent years. Especially within the domain of programming language
 research, there is a strong emphasis on providing mechanised proofs
 accompanying work in the area. Indeed, \citeauthor{Aydemir:2005:MMM} have
 published a series of challenges on mechanising programming languages aimed at
@@ -274,17 +285,15 @@ of $\lambda$-calculi where bound variables are represented as \textit{de
   Bruijn indices}~\footnote{A de Bruijn index is a number used to represent a
   bound variable which indicates the position of its binder (starting from
   zero for the innermost binder). For example, $\lambda~(\lambda~1)$
-  corresponds to $\lambda x. \lambda y. x$, i.e. the constant function.} and
-free variables are represented as named terms; the \textit{locally nameless}
-representation. Their work resulted in a library for handling commonly
-occurring aspects in programming language metatheory which has been used since
-in other developments~\cite{Park:2014:MMW}. Reusable libraries reduce the
-proof engineering effort needed for later works, in contrast to the
+  corresponds to $\lambda x. \lambda y. x$, i.e. the \textbf{K} combinator.}
+and free variables are represented as names; the \textit{locally nameless}
+representation~\cite{Char:2012}. Their work resulted in a library for handling
+commonly occurring aspects in programming language metatheory which has been
+used since in other developments~\cite{Park:2014:MMW}. Reusable libraries
+reduce the proof engineering effort needed for later works, in contrast to the
 pen-and-paper approach, and some proof assistants (as is the case with Coq)
 allow one to extract a program from the development which can provide a
-typechecker or compiler for the language formalised.~\footnote{Curry-Howard
-  strikes again; a proof of decidability of typechecking corresponds to a
-  program implementing a typechecker for the language.}
+typechecker or compiler for the language formalised.
 
 Some recent mechanisation effort focuses on providing a basis for studying
 linearity within type systems. This work is of interest to the current project
@@ -292,36 +301,25 @@ since most session-based type systems assume a strictly linear type system
 which requires re-binding of channel identifiers, such as in the functional
 setting of \citeauthor{Gay:2010:LAST}. \citeauthor{Mazurak:2010:LLT} present
 an extension to System F (termed \fpop) with a notion describing types as
-having linear or non-linear \textit{kind}~\cite{Mazurak:2010:LLT}. This
-extension is motivated by previous work on incorporating linearity into type
-systems. Overall, previous attempts either hamper the inclusion of desirable
-programming features (such as polymorphism), or do not adequately reflect
-non-linearity as the common case leading to awkward programming. \fpop avoids
-these deficiencies by categorising types into kinds whilst maintaining similar
-semantics to System F. Mechanised proofs for type soundness and parametricity
-are presented, and the semantics allow non-linear types to be treated as
-linear. Examples show the system can provide a wide range of permissions on
-interfaces, from full exclusive access to read-only shared references. The
-system is very close to the Alms language described by
-\citeauthor{Aldrich:2009} but has the advantage that the soundness results
-(type safety and parametricity) have been entirely mechanised in Coq.
+having linear or non-linear kind~\cite{Mazurak:2010:LLT}. This extension is
+motivated by previous work on incorporating linearity into type systems which
+either hampered the inclusion of desirable programming features (such as
+polymorphism), or did not adequately reflect non-linearity as the common case
+leading to awkward programming. \fpop avoids these deficiencies by
+categorising types into kinds whilst maintaining similar semantics to System
+F. Mechanised proofs for type soundness and parametricity are presented, and
+the semantics allow non-linear types to be treated as linear. Examples show
+the system can provide a wide range of permissions on interfaces, from full
+exclusive access to read-only shared references. The system is very close to
+the Alms language but has the advantage that the soundness results (type
+safety and parametricity) have been entirely mechanised in Coq.
 
-%%  It would be interesting to see if one could encode the ``adopt'' and
-%% ``focus'' constructs in this system to compare its expressiveness to
-%% Alms. The ``adopt'' rule can be encoded similarly to the ShareRef
-%% example~\cite{Mazurak:2010:LLT}. It is not immediately clear how to encode
-%% the ``focus'' rule within the present semantics, as one needs to prevent
-%% non-linear access to its argument implying the presence of knowledge about
-%% aliasing within the typing judgements; absence of aliasing is not
-%% identified with linear kinded types in \fpop.
-
-While not related to programming language metatheory,
 \citeauthor{Gay:2001:FFP}~\cite{Gay:2001:FFP} provides a $\pi$-calculus
 framework mechanised in Isabelle/HOL. The aim is to build a mechanisaton of
 session-based type systems on top of the $\pi$-calculus framework. The use of
 de Bruijn indices for both bound and free variables causes issues with
-variable substitution often requiring permutation of typing environments (see
-\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} for a discussion on
+variable substitution often requiring permutation of typing environments
+(\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} provide a discussion on
 binder representations) and lifting of free variables during substitution; I
 avoid this issue in my representation choice (\S \ref{sec:approach}).
 
