--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -245,6 +245,22 @@ Functional Programming},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
 }
+@article{Char:2012,
+author={Chargu{\'e}raud, Arthur},
+title={The Locally Nameless Representation},
+year={2012},
+issn={0168-7433},
+journal={Journal of Automated Reasoning},
+volume={49},
+number={3},
+doi={10.1007/s10817-011-9225-2},
+url={http://dx.doi.org/10.1007/s10817-011-9225-2},
+publisher={Springer Netherlands},
+keywords={Locally nameless; Cofinite quantification; Formal proofs; Binders;
+                  Metatheory},
+pages={363-408},
+language={English}
+}
 @inproceedings{Aydemir:2008:EFM,
  author = {Aydemir, Brian and Chargu{\'e}raud, Arthur and Pierce, Benjamin C. and Pollack, Randy and Weirich, Stephanie},
  title = {Engineering Formal Metatheory},
