Added beginnings of CP propositions and processes.
Need to ask Simon what he thinks about all these figures.

--- a/paper/background.tex
+++ b/paper/background.tex
@@ -233,6 +233,8 @@ functions.
 
 \input{gv-types-terms}
 
+\input{cp-types-terms}
+
 \citeauthor{Wadler:2014}'s recent work~\cite{Wadler:2014} brings together a
 process calculus, CP, based on the earlier work by
 \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by
