--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -53,14 +53,14 @@ This project describes work towards the formalisation of calculi developed by
 classical linear logic (CP) and a functional language with session types (GV)
 using interactive theorem proving (in particular, the system Coq). The
 formalisation is a contribution to the practice of programming language
-metatheory and informs what is required of a framework for formalising lambda
-calculus type systems with session types. Such a framework should enable a
-whole class of related languages and type systems to be formalised with little
-extra proof effort and is inspired by previous work on a mechanised framework
-for $\pi$-calculus type systems~\cite{Gay:2001:FFP}. The current work focuses
-on the lambda calculus to provide a basis on which session types for
-mainstream programming languages can be studied, taking advantage of previous
-proof effort through the re-use of existing libraries for programming language
-metatheory. The work has presented a number of interesting challenges for the
-formalisation of programming languages and as a result generated a number of
-useful guidelines and issues to consider.
+metatheory and informs what is required of a framework for formalising
+$\lambda$-calculus type systems with session types. Such a framework should
+enable a whole class of related languages and type systems to be formalised
+with little extra proof effort and is inspired by previous work on a
+mechanised framework for $\pi$-calculus type systems~\cite{Gay:2001:FFP}. The
+current work focuses on the $\lambda$-calculus to provide a basis on which
+session types for mainstream programming languages can be studied, taking
+advantage of previous proof effort through the re-use of existing libraries
+for programming language metatheory. The work has presented a number of
+interesting challenges for the formalisation of programming languages and as a
+result generated a number of useful guidelines and issues to consider.
