--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -29,6 +29,8 @@
     {||}{$\parallel$}1
 }
 
+\newcommand{\stlc}{\lambda^\rightarrow}
+
 \DeclareMathAlphabet{\mathsb}{OT1}{cmss}{bx}{n}
 \newcommand{\msf}{\mathsf}
 \newcommand{\msb}{\mathsb}
