--- a/paper/background.tex
+++ b/paper/background.tex
@@ -237,32 +237,32 @@ functions.
 
 \citeauthor{Wadler:2014}'s recent work~\cite{Wadler:2014} brings together a
 process calculus, CP, based on the earlier work by
-\citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by
-\citeauthor{Gay:2010:LAST}. GV presents session types using a modified version
-of the standard definition presented in \S~\ref{sec:pre}. Figure~\ref{??}
-presents the types of GV with session types ranged over by $S$. Note that
-\lstinline{end} has been replaced with $\outend$ and $\inend$ denoting the
-terminating session type for $\cdots$ and $\cdots$ respectively \todo{what are
-  the interpretations for $\outend$ and $\inend$? Need a figure for GV
-  sessions}. CP presents linear logical connectives with session type
+\citeauthor{Caires:2010:STI}, and a functional language, GV, based on LAST by
+\citeauthor{Gay:2010:LAST}. Figure~\ref{fig:gvtnts} presents the types and
+terms GV with types ranged over by $T$, session types ranged over by $S$ and
+terms ranged over by $L$, $M$ and $N$. GV session types are a modified version
+of the definition presented in \S~\ref{sec:pre} where \lstinline{end} has been
+replaced with $\outend$ and $\inend$. The intention is that $\outend$
+($\inend$) terminates a session type whose last operation is an output
+(input), and they correspond to the units of the respective linear logical
+connectives \todo{Do I need to elaborate on the translation? Yet another
+  figure?}. CP provides linear logical connectives with session type
 interpretations inspired by
-\citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI} shown in Figure~\ref{??}
-\todo{figure for CP types with session type
-  interpretation}. \citeauthor{Wadler:2014} describes a continuation-passing
-style (CPS) translation from GV session types to CP classical linear logic
-propositions.  \todo{terms and interpretations for CP/GV?} The process
-calculus CP is slightly different to $\pi$DILL by
-\citeauthor{Caires:2010:STI}, apart from being classical in nature, the
-constructs for server replication are modified; CP provides separate weakening
-and contraction rules whereas these are encoded in one rule for process
-reduction in $\pi$DILL. Additionally, rather than a two-sided sequent
-calculus, \citeauthor{Wadler:2014} uses one-sided sequents for defining CP,
-which provides a more intuitive presentation of session type duality and a
-clearer correspondence to a $\lambda$-calculi surface syntax, simplifying the
-translation presentation. As presented, GV does not support all features of CP
-and thus the translation is one way (GV to
+\citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI} shown in
+Figure~\ref{fig:cptnts} along with the terms of CP. The process calculus CP is
+slightly different to $\pi$DILL by \citeauthor{Caires:2010:STI}, apart from
+being classical in nature, the constructs for server replication are modified:
+CP provides separate weakening and contraction rules whereas these are encoded
+in one rule for process reduction in $\pi$DILL. Additionally, rather than a
+two-sided sequent calculus, \citeauthor{Wadler:2014} uses one-sided sequents
+for defining CP, which provides a more intuitive presentation of session type
+duality and a clearer correspondence to a $\lambda$-calculi surface syntax
+like GV. \citeauthor{Wadler:2014} describes a continuation-passing style (CPS)
+translation from GV types and terms to CP classical linear logic propositions
+and processes, respectively. As presented, GV does not support all features of
+CP and thus the translation is one way (GV to
 CP). \citeauthor{Lindley:2014:SAP}~\cite{Lindley:2014:SAP} extend GV to
-provide support for polymorphism and replication, following a similar CPS
+provide support for polymorphism and replication following a similar CPS
 translation scheme. Lastly,
 \citeauthor{Lindley:2014:SPS}~\cite{Lindley:2014:SPS} describe operational
 semantics for GV and their system has greater similarities with LAST than
