--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -46,8 +46,8 @@ principles in some cases, e.g. weakening~\cite{Aydemir:2008:EFM}. This
 decision impacts upon the premises of the CP/GV typing rules (\S~\ref{sec:cp}
 and \S~\ref{sec:gv}), however these changes do not alter the typing of
 processes nor the semantics of the translation from GV to CP. An equivalence
-between ``exists-fresh'' and cofinite quantification definitions of the
-simply-typed $\lambda$-calculus is given by
+between ``exists-fresh'' and cofinite quantification definitions for the
+simply-typed $\lambda$-calculus ($\stlc$) is given by
 \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, and I suspect a similar
 result could be derived straightforwardly (but tediously) for the CP/GV
 system.
@@ -56,25 +56,31 @@ Another aspect of the encoding is how to define terms. The intrinsic encoding
 described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one
 approach, indexing terms by their type so as to prevent ill-formed terms from
 being constructed. However, there are issues with using this encoding for
-CP/GV: $(1)$ it is not immediately clear how to handle linear contexts using
-the de Bruijn variable encoding, since in the intrinsic setting the
-environment automatically supports weakening; $(2)$ an intrinsic encoding of
-GV terms would be complicated by the need to enforce that session types occur
-in certain instances (by use of a predicate); and $(3)$ well-typed terms
-require extra assumptions about binder freshness which cannot reasonably be
-expressed as a function type. For these reasons, an intrinsic approach does
-not offer much benefit since a well-typed term relation would still need to be
-defined. Therefore, I chose an extrinsic encoding for terms and define
-well-typed terms as a separate inductive type.
+CP/GV:
+\begin{enumerate}
+\item It is not immediately clear how to handle linear contexts using the de
+  Bruijn variable encoding, since in the intrinsic setting the environment
+  automatically supports weakening
+\item An intrinsic encoding of GV terms would be complicated by the need to
+  enforce that session types occur in certain instances (by use of a
+  predicate)
+\item Well-typed terms require extra assumptions about binder freshness which
+  cannot reasonably be expressed as a function type.
+\end{enumerate}
+
+For these reasons, an intrinsic approach does not offer much benefit since a
+well-typed term relation would still need to be defined. Therefore, I chose an
+extrinsic encoding for terms and define well-typed terms as a separate
+inductive type.
 
 \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} note that the size of
 their language proof infrastructure is proportional to the number of binding
-constructs. In the case of a simply typed $\lambda$-calculus ($\stlc$) this is
-not onerous, but GV has four binding constructs, CP has six and propositions
-have two. Indeed, a lot of effort was expended setting up this
-infrastructure. However, I believe one of the contributions of this work is to
-articulate what one needs from state of the art metatheory libraries in order
-to handle session-based languages, and more generally, linear type systems.
+constructs. In the case of a $\stlc$ this is not onerous, but GV has four
+binding constructs, CP has six and propositions have two. Indeed, a lot of
+effort was expended setting up this infrastructure. However, I believe one of
+the contributions of this work is to articulate what one needs from state of
+the art metatheory libraries in order to handle session-based languages, and
+more generally, linear type systems.
 
 \citeauthor{Park:2014:MMW} describe a technique for removing non-linear
 contexts from typing judgements. While their work extended to \fpop it is not
@@ -116,16 +122,16 @@ tedious details relating to environment uniqueness and ordering (see below)
 elided. In other words, bound variables are represented using de Brujin
 indices and free variables are represented using an abstract type provided by
 the Metatheory library. The rules with binders reflect this by specifying the
-type of a bound variable in the constructor rather than the name. Cofinite
+type of a bound variable in the constructor rather than a name. Cofinite
 quantification is performed in the hypotheses to these rules by excluding a
 finite set of names from opening the subprocesses where opening a process $P$
 with name $x$ is denoted $P^x$. Note that the rules for polymorphism,
-$\exists$ and $\forall$, were included in the final Coq development since GV
-(\S~\ref{sec:gv}) does not support polymorphism making the rules unnecessary
-for the translation. Further, as noted by \citeauthor{Lee:2012}, support for
-polymorphism in type variables creates an explosion of the infrastructure
-requiring additional of opening and substituting definitions and lemmas. They
-appear in the Figure simply for the sake of completeness.
+$\exists$ and $\forall$, were not included in the final Coq development since
+GV (\S~\ref{sec:gv}) does not support polymorphism making the rules
+unnecessary for the translation. Further, as noted by \citeauthor{Lee:2012},
+support for polymorphism in type variables creates an explosion of the
+infrastructure requiring additional of opening and substituting definitions
+and lemmas. They appear in the Figure simply for the sake of completeness.
 
 Formalising the process calculus CP provided many challenges for the
 Metatheory library since to my knowledge, the library has never been applied
@@ -137,80 +143,100 @@ standard. Additionally, substitution and opening are only defined for
 names. In other words, one cannot substitute an arbitrary process term for a
 name, unlike in the $\lambda$-calculus. Thus frameworks which assume
 $\lambda$-calculi style operations are not immediately amenable to the CP
-setting~\cite{Lee:2012}. Ordering in environments is ignored so the
-development required lemmas allowing the permutation of
-environments. Permutating environments is not currently supported by the
-Metatheory library but some general lemmas were added as a result of this
-work, and custom tactics were developed to automatically solve certain
-permutation goals via simple proof search. However, there are still many cases
-where manual sequences of primitive lemmas, such as appending, commutativity
-and transitivity, need to be used. A lot of these cases are similar but there
-would not appear to be an advantage in developing a tactic to do the
-work. Doing so would create a dependency between a hard-to-debug and obscure
-Ltac definition and the proofs which utilise it, becoming a burden to
-change. This development philosophy treats Ltac definitions akin to macros, a
-shorthand for expressing an oft-repeated sequence of tactics, and it is
-doubtful much can be gained from it unless the use of Ltac definitions can be
-made more transparent.
+setting~\cite{Lee:2012}.
 
-% ...leading on to the discussion of the explicit weakening...
+Ordering in environments is ignored so the development required operations for
+handling permutations of environments. The Metatheory library does not
+currently support permutating environments, however some basic lemmas were
+added as a result of this work, and custom tactics were developed to
+automatically solve certain permutation goals via simple proof search. Even
+so, there are still many cases where sequences of primitive lemmas, such as
+those handling append, commutativity and transitivity, need to be applied
+manually. A lot of these cases are similar but there would not appear to be an
+advantage in developing a tactic to do the work. Doing so would create a
+dependency between a hard-to-debug and obscure Ltac definition and the proofs
+which utilise it, becoming a burden to change. Further, such a development
+philosophy treats Ltac tactics akin to macros, a shorthand for expressing an
+oft-repeated sequence of tactics, and it is doubtful much can be gained from
+it unless the execution of Ltac tactics can be made more transparent.
+
+\input{principalcp}
+
+The principal cut elimination rules are presented in Figure~\ref{??}. The
+reduction rules were complicated to prove due to being composed of multiple
+constructor instances and differ significantly to the standard operational
+semantics one typically deals with in $\lambda$-calculus formalisms. As a
+result, these well-typed reductions were not proved ``in-place'', instead each
+rule is proved as a separate lemma. Most proofs followed a pattern but it was
+difficult to automate satisfactorily for the reasons stated in the previous
+paragraph. However, some tasks could be delegated to a custom tactic, for
+example instantiating cofinitely quantified hypotheses with a newly introduced
+fresh variable.
 
 Initially, an implicit notion of weakening was chosen so as to be in line with
 \citeauthor{Wadler:2014}'s definitions. However, explicit weakening is
 required to differentiate the principal cut elimination rules for the various
-interactions between servers and clients. contraction is not supported because
-of the difficulty in specifying its principal cut elimination rule. In order
-to specify the rule one requires to show the following: \todo{fix binders of
-  Q}
+interactions between servers and clients ($\beta_{!?}$ and $\beta_{!W}$). The
+paper presentation does not specify where weakening could occur; it is tacitly
+assumed weakening can always be pushed further up the derivation tree to a
+base rule e.g. $\Ax\Cut$ rule. Contraction is not supported in the
+formalisation due to the difficulty in specifying its principal cut
+elimination rule. In order to specify the rule one requires to show the
+following:
 \begin{gather*}
-\tm{\nu A.(!0(A).P \mid ?z[z',z''].Q)}
+\tm{\nu A.(!0(A).P \mid ?z[[A]].Q)}
 \quad \becomes \quad \\
 \tm{\nu A.(!0(A).P \mid \nu A.(!0(A).P \mid \key{contract}_{\Gamma} Q))}
 \end{gather*}
 
-where $\tm{P^y} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}$ for some
+where $\tm{?z[[A]].Q}$ denotes contraction by $z$ of two channels of type $A$
+in $Q$, $\tm{P^y} \tpvdash \tp{{?\Gamma} \comma \tmof{y}A}$ for some
 sufficiently fresh name $y$ and $\key{contract}_{\Gamma} \tm{Q}$ contracts
 $\tm{Q}$ with the names in $\Gamma$.
 
 Unfortunately, the reduction relation does not have knowledge of the
-environment typing process P. This fact does not impact upon expressing
-weakening since for weakening only the names (not the bindings) within the
-environment are required. The paper presentation does not specify where
-weakening could occur; it is tacitly assumed weakening can always be pushed
-further up the derivation tree e.g. AxCut rule. a consequence of this choice
-is that for the empty choice rule there may only be a single binding in the
-context (cf. an arbitrary context in \citeauthor{Wadler:2014}'s
-presentation~\cite{Wadler:2014}). one can compare alms with this version of cp
+environment, $\Gamma$, typing process $\tm{P}$. This fact does not impact upon
+expressing weakening because only the names (not the types in the bindings)
+within the environment are required for weakening. one can compare alms with this version of cp
 since it weakening rule corresponds to affine logic
 
-% ...leading on to presentation of principal cut elimination rules...
-
-\input{principalcp}
-
-The structural equvialences and principal cut elimination rules are presented
-in Figures~\ref{??} and \ref{??} respectively. These rules are expressed to
-indicate some additional complexity not present in the original
-presentation. For example, structural equivalences are not unique and
-different process terms result depending on initial binder permutation. ${0
-  <~> 1}P$ indicates the permuting of binders $0$ and $1$ in process P. The
-paper presentation specifies only one possible associativity rule lending to
-the specific split of the linear environments. The reduction rules were
-complicated to prove due to being composed of multiple constructor instances
-and differed significantly to the standard operational semantics one typically
-deals with in lambda calculus formalisms.  linear environments caused a
-problem with the splitting up of variables.
+In the empty choice rule there may only be a single binding in the context
+(cf. an arbitrary context in \citeauthor{Wadler:2014}'s
+presentation~\cite{Wadler:2014}). While this diverges with the presentation of
+linear logic it became necessary to do this because otherwise there would be
+no relationship between the free variables within a process and its
+environment. no there is a clear iff relationship which permits reduction
+rules to apply such as i think weakening but it should be any rule which takes
+some fvs of proc and infers something about environments from that...otherwise
+what it is not at all clear how to encode the reductions in a relation, the
+subprocesses environments are created from destructing the environment
 
 % ...commuting conversions
+
+\input{cpstructeq}
 
 \input{commconvonecp}
 
 \input{commconvtwocp}
 
-The commuting conversions are shown in Figures~\ref{??} and~\ref{??}. Notice
-that permutating binders is essential to formulating the majority of these
-rules.
-
-% ...leading on to a discussion of further CP-specific issues encountered.
+The structural equivalences and commuting conversions are shown in
+Figure~\ref{??} and Figures~\ref{??} and~\ref{??}, respectively. These rules
+are expressed to indicate some additional complexity not present in the
+original presentation. For example, structural equivalences are not unique and
+different process terms result depending on initial binder
+permutation. $\permb{0}{1}$ indicates the permuting of binders $0$ and $1$ in
+process $\tm{P}$. The paper presentation specifies only one possible
+associativity rule lending to the specific split of the linear environments.
+Notice that permutating binders is essential to formulating the majority of
+these rules. Analysing permutations containing singleton bindings was
+necessary for the commuting conversion rules. Singleton bindings can occur
+frequently during a proof and it is sometimes necessary to analyse a
+permutation of the form P++x~A ~~ Q++R to determine whether x occurs in Q or
+R. the rule for associativity requires this and so do quite a few reduction
+rules. since this involves some element of searching the context followed by
+destructing hypotheses it could be effectively automated in permutations in
+subprocesses which use a binder of the parent. the rule for associativity w
+linear environments caused a problem with the splitting up of variables.
 
 % ... subject reduction ...
 
