--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -516,3 +516,4 @@
 \newcommand{\spacer}{\quad\quad\quad\quad}
 \newcommand{\filler}{\hspace{0.9\textwidth}}
 \newcommand{\tighten}{\vspace{-1ex}}
+\newcommand{\permb}[2]{\left\{{#1}\leftrightsquigarrow{#2}\right\}}
